--- a/src/app/page-list/page-list.component.html
+++ b/src/app/page-list/page-list.component.html
@@ -10,7 +10,9 @@
     <tbody>
         <tr *ngFor="let page of pages">
             <td>
-                <a target ="_blank" [href]="'https://en.wikipedia.org?curid=' + page.pageid "  >{{page["title"]}}</a>
+                <!-- <a target ="_blank" [href]="'https://en.wikipedia.org?curid=' + page.pageid "  > -->
+                    {{page["title"]}}
+                <!-- </a> -->
             </td>
             <td>{{page["wordcount"]}}</td>
             <td >{{page["snippet"]}}</td>
